@@ -29,3 +29,21 @@ int32_t SPVM__Net__SSLeay__OCSP__response_status_str(SPVM_ENV* env, SPVM_VALUE* 
   return 0;
 }
 
+int32_t SPVM__Net__SSLeay__OCSP__response_status(SPVM_ENV* env, SPVM_VALUE* stack) {
+  
+  int32_t error_id = 0;
+  
+  void* obj_resp = stack[0].oval;
+  
+  if (!obj_resp) {
+    return env->die(env, stack, "The OCSP response $resp must be defined.", __func__, FILE_NAME, __LINE__);
+  }
+  
+  OCSP_RESPONSE* resp = env->get_pointer(env, stack, obj_resp);
+  
+  int32_t status = OCSP_response_status(resp);
+  
+  stack[0].ival = status;
+  
+  return 0;
+}
