@@ -3,6 +3,10 @@
 
 class Net::SSLeay::OCSP {
   
+  use Net::SSLeay::OCSP_RESPONSE;
+  
   native static method response_status_str : string ($code : long);
   
+  native static method response_status : int ($resp : Net::SSLeay::OCSP_RESPONSE);
+
 }
