@@ -1,6 +1,7 @@
 0.013 2024-11-13
   [New Features]
     * Add Net::SSLeay::OCSP#response_status_str method.
+    * Add Net::SSLeay::OCSP#response_status method.
 0.012 2024-11-13
   [New Features]
     * Add Net::SSLeay::X509_STORE_CTX#set_error method.
